Add result defintion and result post path
